# ines-tools

./: .gitignore  README.md  pyproject.toml  setup.cfg
0_templates/: generic_data_format.json  generic_data_format_example.json  pypsa_template.json  pypsa_template.py
2_importers/: convert_nc_json.py  import_pypsa.jl
4_data_processing/: filter.jl  usersettings.json
6_exporters/: generic_to_flextool.py  ines_to_flextool.py  map_pypsa.jl  map_spineopt.jl  translation.jl
7_tools/: run_pypsa.py  run_spineopt.jl
docs/: make.jl  mkdocs.yml
docs/src/: index.md
docs/src/examples/: stepstone_exercise.md  workflow_20230815.md
examples/: aggregation_weights.csv
examples/workflow_20230619_stepstones/.spinetoolbox/: project.json
examples/workflow_20230619_stepstones/.spinetoolbox/items/external_data/: powerplants.csv
examples/workflow_20230619_stepstones/.spinetoolbox/items/filter_and_transform/: filterandtransform.jl
examples/workflow_20230619_stepstones/.spinetoolbox/items/results/: Output.sqlite
examples/workflow_20230619_stepstones/.spinetoolbox/local/: project_local_data.json
ines_tools/: __init__.py  collect_results.py  convert_json_spinedb.py  convert_spinedb_json.py  filter.py  helpers.py  ines_aggregate.py  ines_initialize.py  ines_transform.py  map.jl  map.py  translation.py
ines_tools/tool_specific/: README.md
ines_tools/tool_specific/mathprog/: read_mathprog_model_data.py  read_mathprog_model_structure.py  settings_OSeMOSYS.yaml  settings_template.yaml  write_mathprog_model_data.py
src/: ines_transform.py  read_mathprog_model_structure.py
(+4 files in other folders)
