[metadata]
name = 
version = attr: ines_tools.__version__
author = contributors
author_email = 
license = MIT
description = Data tools for ines-spec compatible data.
url = https://github.com/energy-modelling-workbench/ines-tools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    spinedb_api >= 0.8
include_package_data = True
python_requires = >=3.7

[options.packages.find]
exclude = tests*

